version/0.31/_sources/api/solver/_autosummary/settings/geometry_6_child.rst.txt
:orphan:

.. _geometry_6_child:

geometry_child
==============

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.geometry_6_child
    :show-inheritance:

.. rubric:: Attributes

============================   ======================================

Attribute                                                     Summary

============================   ======================================
:ref:`name <name_2>`                              Name of the object.

:ref:`location <location_2>`                     Input location name.

:ref:`settings <settings_5>`       Domain name to define settings on.

============================   ======================================

.. rubric:: Methods

======================   ===============================================

Method                                                           Summary

======================   ===============================================
:ref:`split <split_1>`       Input boundary and location names to split.

======================   ===============================================

.. rubric:: Included in:

==============================   ================

Parent                                    Summary

==============================   ================
:ref:`geometry_6 <geometry_6>`       Thread-type.

==============================   ================

